--- a/photo/templates/photo/photo_list.html
+++ b/photo/templates/photo/photo_list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <title>Photo App</title>
+   <title>Photo Appss</title>
 </head>
 <body>
     <h1><a href="">사진 목록 페이지</a></h1>
