--- a/photo/templates/photo/photo_detail.html
+++ b/photo/templates/photo/photo_detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <title>Photo App</title>
+     <title>Photo App2</title>
 </head>
 <body>
     <h1>{{ photo.title }}</h1>
