--- a/photo/templates/photo/photo_list.html
+++ b/photo/templates/photo/photo_list.html
@@ -4,7 +4,7 @@
    <title>Photo Appss</title>
 </head>
 <body>
-    <h1><a href="">사진 목록 페이지</a></h1>
+    <h1><a href="">사진 목록 페이지1</a></h1>
     <section>
         {% for photo in photos %}
         <div>
